--- a/.github/workflows/n9e.yml
+++ b/.github/workflows/n9e.yml
@@ -26,3 +26,9 @@ jobs:
 
     - name: Build
       run: make
+      
+    - name: Upload build
+      uses: actions/upload-artifact@v1
+      with:
+        name: build
+        path: build
