--- a/.github/workflows/n9e.yml
+++ b/.github/workflows/n9e.yml
@@ -31,3 +31,4 @@ jobs:
       uses: actions/upload-artifact@v1
       with:
         name: build
+        path: /home/runner/work/nightingale/nightingale
